Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   styles.css

--- a/styles.css
+++ b/styles.css
@@ -4,11 +4,11 @@
 }
 
 body{
-    background-color: #FBF6EE;
+    background-color: #fff1d4;
 }
 
 .dropdown-menu{
-    background-color: #FBF6EE;
+    background-color: #fff1d4;
 }
 
 .inside-Main{
